[tmux] initial customizations

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,19 @@
 unbind C-b
 set -g prefix C-a
-bind C-a last-window
+bind C-a send-prefix
+
+bind a last-window
+bind C-p previous-window
+bind C-n next-window
+bind -n C-b next-window
+bind C-c new-window
+
+bind C-Space split-window
+bind Space split-window -h
+bind -n C-Space select-pane -t :.+
 
 set -g mouse on
 set -g default-terminal "screen-256color"
+set-window-option -g xterm-keys on
+
+set -g window-status-current-style bg='#00ee00'
