--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,8 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+bind r source-file ~/.tmux.conf \; display-message "reload config..."
+
 bind a last-window
 bind C-p previous-window
 bind C-n next-window
