--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ bind a last-window
 bind C-p previous-window
 bind C-n next-window
 bind -n C-b next-window
-bind C-c new-window
+bind C-c new-window \; split-window -h
 
 bind C-Space split-window
 bind Space split-window -h
