--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,8 @@ bind C-p previous-window
 bind C-n next-window
 bind -n C-b next-window
 bind C-c new-window \; split-window -h
+bind \ confirm-before -p "kill-session #S? (y/n)" kill-session
+bind k confirm-before -p "kill-window #W? (y/n)" kill-window
 
 bind C-Space split-window
 bind Space split-window -h
