--- a/tmux.conf
+++ b/tmux.conf
@@ -6,8 +6,9 @@ bind r source-file ~/.tmux.conf \; display-message "reload config..."
 
 bind a last-window
 bind C-p previous-window
+bind -n C-b previous-window
 bind C-n next-window
-bind -n C-b next-window
+bind -n C-n next-window
 bind C-c new-window \; split-window -h
 bind \ confirm-before -p "kill-session #S? (y/n)" kill-session
 bind k confirm-before -p "kill-window #W? (y/n)" kill-window
