--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,8 @@ bind C-Space split-window
 bind Space split-window -h
 bind -n C-Space select-pane -t :.+
 
+set -g allow-rename off
+
 set -g mouse on
 set -g default-terminal "screen-256color"
 set-window-option -g xterm-keys on
