[tmux] Don't open split window on C-c

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ bind C-p previous-window
 bind -n C-b previous-window
 bind C-n next-window
 bind -n C-n next-window
-bind C-c new-window \; split-window -h
+bind C-c new-window
 bind \ confirm-before -p "kill-session #S? (y/n)" kill-session
 bind k confirm-before -p "kill-window #W? (y/n)" kill-window
 
