--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,10 @@
 unbind C-b
 set -g prefix C-a
-bind C-a send-prefix
+bind a send-prefix
 
 bind r source-file ~/.tmux.conf \; display-message "reload config..."
 
-bind a last-window
+bind C-a last-window
 bind C-p previous-window
 bind -n C-b previous-window
 bind C-n next-window
