[tmux] reattach-to-user-namespace

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,4 +23,6 @@ set -g mouse on
 set -g default-terminal "screen-256color"
 set-window-option -g xterm-keys on
 
+set -g default-command "reattach-to-user-namespace -l zsh"
+
 set -g window-status-current-style bg='#00ee00'
