--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@ bind -n C-b previous-window
 bind C-n next-window
 bind -n C-n next-window
 bind C-c new-window
-bind \ confirm-before -p "kill-session #S? (y/n)" kill-session
+bind \\ confirm-before -p "kill-session #S? (y/n)" kill-session
 bind k confirm-before -p "kill-window #W? (y/n)" kill-window
 
 bind C-Space split-window
